--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,21 @@
 ---
 title: "Introduction"
-description: "Welcome to the new home for your documentation"
+description: "Discover how to seamlessly integrate chat, streaming, and tool-calling in your apps."
+sidebarTitle: "Introduction"
+icon: "house"
 ---
 
-## Setting up
+## What is FlintAI?
 
-Get your documentation site up and running in minutes.
+FlintAI is a high-performance AI inference provider designed for seamless integration into any application. This documentation provides detailed information on how to interact with the FlintAI API, including authentication, available endpoints, and usage examples.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+## **Key Features**
 
-## Make it yours
+The API includes a range of features designed to increase efficiency:
 
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+1. **Minimalism** Quickly use the FlintAI PipeSDK for quick requests requiring power.
+2. **Speed** Try out `flintai-mini:turbo` or `flintai:turbo` for blazing fast inference, reaching upto 2000 tps.
+3. **Power**: Use propietory models like `chatgpt`, `gemini`, and various open-source LLMs having upto 1 trillion parameters.
+4. **Multiple Models**: Access to various models from cheap, lightweight ones to heavyduty LLMs.
+5. **Integration**: Use the FlintAI SDKs to integrate FlintAI in your apps without having to deal with APIs.
+6. **Tool-Calling**: Easily call tools using the API to extend functionality.
