--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,73 @@
 ---
+sidebarTitle: "Quickstart"
 title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+description: "Get up and running with FlintAI in a few minutes."
+icon: "bolt"
 ---
 
-## Get started in three steps
+## **Requesting your first Chat Completion**
 
-Get your documentation site running locally and make your first customization.
+<Tabs>
+  <Tab title="cURL">
+    ```bash
+    curl -X POST "https://ai.flintstudios.workers.dev/v1/chat/completions" \
+         -H "Authorization: Bearer $FLINTAI_API_KEY" \
+         -H "Content-Type: application/json" \
+         -d '{"messages": [{"role": "user", "content": "Explain the importance of fast language models."}], "model": "flintai-mini"}'
+    ```
+  </Tab>
+  <Tab title="Python">
+    Execute this command to install the Python FlintAI SDK
 
-### Step 1: Set up your local environment
+    ```shellscript
+    pip install flintai
+    ```
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
+    Query `flintai-mini` using ChatCompletionsAPI
+
+    ```python
+    from flintai import FlintAI
     
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
+    ai = FlintAI(api_key="fskey-HnGs6f4b...your-api-key")
+    response = ai.complete(messages="Explain the importance of fast language models.", model="flintai-mini")
     
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+    print(response.content)
+    ```
+  </Tab>
+</Tabs>
 
-### Step 2: Deploy your changes
+## Using third-party SDKs
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+<Tabs>
+  <Tab title="OpenAI Python SDK">
+    Execute this command to install the OpenAI Python SDK.
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+    ```shellscript
+    pip install openai
+    ```
+  </Tab>
+</Tabs>
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
+Query `flintai-mini` using ChatCompletionsAPI.
 
-### Step 3: Go live
+```python
+from openai import OpenAI
+import os
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+client = OpenAI(
+    base_url="https://ai.flintstudios.workers.dev/v1",
+    api_key=os.environ.get("FLINTAI_API_KEY"), # Or hardcode your api key here
+)
 
-## Next steps
+chat_completion = client.chat.completions.create(
+    messages=[
+        {
+            "role": "user",
+            "content": "Explain the importance of fast language models.",
+        }
+    ],
+    model="flintai-mini",
+)
 
-Now that you have your docs running, explore these key features:
-
-<CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
-</CardGroup>
-
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+print(chat_completion.choices[0].message.content)
+```
