Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -3,6 +3,7 @@ title: "Introduction"
 description: "Discover how to seamlessly integrate chat, streaming, and tool-calling in your apps."
 sidebarTitle: "Introduction"
 icon: "house"
+mode: "wide"
 ---
 
 ## What is FlintAI?
