--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,6 +3,7 @@ sidebarTitle: "Quickstart"
 title: "Quickstart"
 description: "Get up and running with FlintAI in a few minutes."
 icon: "bolt"
+mode: "wide"
 ---
 
 ## **Requesting your first Chat Completion**
