Documentation edits made through Mintlify web editor

--- a/flintai/models/index.mdx
+++ b/flintai/models/index.mdx
@@ -8,15 +8,15 @@ mode: "wide"
 
 ## Available Models
 
-<Card title="FlintAI Mini" icon="sparkle" iconType="regular" color="#e9fff7" horizontal href="/models/flintai-mini">
+<Card title="FlintAI Mini" icon="sparkle" iconType="regular" color="#e9fff7" horizontal href="/flintai/models/flintai-mini">
   A pocket-sized general-purpose model built for quick & short responses.
 </Card>
 
-<Card title="FlintAI" icon="sparkle" iconType="solid" color="#81ffd1" horizontal href="/models/flintai">
+<Card title="FlintAI" icon="sparkle" iconType="solid" color="#81ffd1" horizontal href="/flintai/models/flintai">
   A versatile, general-purpose model that balances speed and intelligence for everyday use.
 </Card>
 
-<Card title="FlintAI Ultra" icon="sparkles" iconType="solid" color="#18dd95" horizontal href="/models/flintai-ultra">
+<Card title="FlintAI Ultra" icon="sparkles" iconType="solid" color="#18dd95" horizontal href="/flintai/models/flintai-ultra">
   A high-performance model engineered for advanced reasoning, complex problem-solving, and large-scale creative projects.
 </Card>
 
