Documentation edits made through Mintlify web editor

--- a/flintai/index.mdx
+++ b/flintai/index.mdx
@@ -14,9 +14,9 @@ FlintAI is a high-performance AI inference provider designed for seamless integr
 
 The API includes a range of features designed to increase efficiency:
 
-1. **Minimalism** Quickly use the FlintAI PipeSDK for quick requests requiring power.
-2. **Speed** Try out `flintai-mini:turbo` or `flintai:turbo` for blazing fast inference, reaching upto 2000 tps.
-3. **Power**: Use propietory models like `chatgpt`, `gemini`, and various open-source LLMs having upto 1 trillion parameters.
-4. **Multiple Models**: Access to various models from cheap, lightweight ones to heavyduty LLMs.
-5. **Integration**: Use the FlintAI SDKs to integrate FlintAI in your apps without having to deal with APIs.
-6. **Tool-Calling**: Easily call tools using the API to extend functionality.
+1. **Minimalism:** Quickly use the FlintAI PipeSDK for quick requests requiring power.
+2. **Speed:** Try out `flintai-mini:turbo` or `flintai:turbo` for blazing fast inference, reaching upto 2000 tps.
+3. **Power:** Use propietory models including ones developed by FlintAI, and various open-source LLMs having upto 1 trillion parameters.
+4. **Multiple Models:** Access to various models from cheap, lightweight ones to heavyduty LLMs. Check https://flintstudios.mintlify.app/flintai/models for all models.
+5. **Integration:** Use the FlintAI SDKs to integrate FlintAI in your apps without having to deal with APIs.
+6. **Tool-Calling:** Easily call tools using the API to extend functionality.
